plugins {
  id 'fabric-loom' version '1.4.4'
  id 'maven-publish'
}

archivesBaseName = "${project.meta_modid}-${project.minecraft_version}-fabric"
version = project.mod_version
group = "wile.${meta_modid}"

repositories {}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
  mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
	inputs.property "version", project.version
	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
  outputs.upToDateWhen { false }
  doLast {
    file("${sourceSets.main.output.resourcesDir}/.gitversion-${meta_modid}").text = 'git log "-1" "--format=%h"'.execute().in.text.trim()
  }
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}
